--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="latest-inside">
-                <img src="images/Action/5.jpg" alt="">
+                <img src="images/Action/5.JPG" alt="">
                 <div class="heading1">
                     <h4>KAITHI</h4>
                     <h6>150min</h6>
